# cpman

./: .gitignore  CMakeLists.txt  README.md  cleanup.sh  cpman  cpman.cpp  cpman.h  cpman.pro
src/: cpman.cpp  cpman.h  main.cpp  style.qss
